[tool.poetry]
name = "picow-ws2812"
version = "0.1.0"
description = ""
authors = ["giocaizzi <giocaizzi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
picow_ws2812_core = { path = "libs/picow-ws2812-core", develop = true }
picow_ws2812_driver = { path = "libs/picow-ws2812-driver", develop = true }

[tool.poetry.extras]
dev = ["picow_ws2812_devtools"]

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ipykernel = "^6.29.5"
picow_ws2812_devtools = { path = "libs/picow-ws2812-devtools", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
