[tool.poetry]
name = "picow-ws2812-core"
version = "0.1.0a1"
description = ""
authors = ["Giorgio Caizzi <giocaizzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.black]
force-exclude = 'picow_ws2812_core/fonts.py'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report xml --cov-report html --cov-report lcov"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    # black compatibility
    # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#minimal-configuration
    "E203",
    "E701",
    # RST201, RST203, RST301 - Google Python Style docstrings cause errors (ref:??)
    "RST201",
    "RST203",
    "RST301",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
