[tool.poetry]
name = "picow-ws2812-driver"
version = "0.1.0a1"
description = ""
authors = ["Giorgio Caizzi <giocaizzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
